[project]
name = "pyrb3"
version = "0.1.0"
description = "A Python package to download and parse public data from the B3 exchange."
authors = [
    {name = "Jules", email = "agent@cog-dev.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "typer[rich]>=0.9.0",
    "pyyaml>=6.0.1",
    "lxml>=5.1.0",
    "beautifulsoup4>=4.12.3"
]

[tool.poetry]
packages = [{include = "pyrb3", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
ruff = ">=0.1.6"
mypy = ">=1.7.1"
requests-mock = ">=1.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP", "B", "SIM"]
src = ["src"]
target-version = "py312"

[tool.ruff.isort]
known-first-party = ["pyrb3"]

[tool.mypy]
strict = true
ignore_missing_imports = true
